2005-07-03  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Network Service, Hooks):
	* testsuite.at: 
	* tests/t_netsync_permissions.at: 
	* tests/t_netsync_single.at: Update to match new
	get_netsync_write_permitted definition.

2005-07-03  Nathaniel Smith  <njs@codesourcery.com>

	* lua.{cc,hh} (hook_get_netsync_write_permitted): Don't take a
	branch argument; write permission is now all or none.  (It really
	was before anyway...)
	* netsync.cc: Update accordingly.

2005-07-03  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc: More updating for pattern stuff; getting there...

2005-06-28  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc: Update low-level functions to use include_pattern
	and exclude_pattern.

2005-06-28  Nathaniel Smith  <njs@codesourcery.com>

	* netcmd.{cc,hh} (read_anonymous_cmd, write_anonymous_cmd)
	(read_auth_cmd, write_auth_cmd): Take include_pattern and
	exclude_pattern arguments.

2005-06-28  Nathaniel Smith  <njs@codesourcery.com>

	* globish.{cc,hh}: New files.
	* Makefile.am (MOST_SOURCES): Add them.
	* transforms.{cc,hh}: Remove glob-related stuff.
	* unit_tests.{cc,hh}: Call globish unit tests.

2005-06-27  Nathaniel Smith  <njs@codesourcery.com>

	* transforms.cc (glob_to_regex, globs_to_regex, regexes_to_regex):
	Choose "regex" as standard spelling.  Clean up code, add code for
	handling sets, start improving tests (don't currently pass).
	* transforms.hh (glob_to_regex, globs_to_regex, regexes_to_regex):
	Prototype.

2005-06-25  Nathaniel Smith  <njs@codesourcery.com>

	* netsync.cc: Tweak comment.

2005-06-25  Nathaniel Smith  <njs@codesourcery.com>

	* AUTHORS: Add Ethan Blanton <elb@elitists.net>.

2005-06-22  Nathaniel Smith  <njs@codesourcery.com>

	* netcmd.hh (netcmd::read, netcmd::write): Don't have defaults for
	key/hmac arguments.
	* netcmd.cc (do_netcmd_roundtrip): New function.
	(test_netcmd_functions): Use it.  Also, make work with hmac
	changes.
	(test_netcmd_mac): New test.