@@ -1,5 +1,11 @@
 2005-07-03  Nathaniel Smith  <njs@codesourcery.com>
 
+	* globish.hh: Document the empty pattern as never matching.
+	* globish.cc (checked_globish_to_regex): Implement it.
+	(globish_matcher_test): Check it.
+
+2005-07-03  Nathaniel Smith  <njs@codesourcery.com>
+
 	* monotone.texi (Network Service, Hooks):
 	* testsuite.at: 
 	* tests/t_netsync_permissions.at: 
